[media-source] Fix imported/w3c/web-platform-tests/media-source/mediasource-appendwindow.html https://bugs.webkit.org/show_bug.cgi?id=162306

Reviewed by Darin Adler.

Source/WebCore:

appendWindowStart should be a restricted double, and both it and appendWindowEnd should throw
TypeError exceptions when setting them to disallowed values.

* Modules/mediasource/SourceBuffer.cpp:
(WebCore::SourceBuffer::setAppendWindowStart):
(WebCore::SourceBuffer::setAppendWindowEnd):
* Modules/mediasource/SourceBuffer.idl:

LayoutTests:

* platform/mac/TestExpectations:


Canonical link: https://commits.webkit.org/180335@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206186 268f45cc-cd09-0410-ab3c-d52691b4dbfc